--- a/index.html
+++ b/index.html
@@ -21,90 +21,39 @@
     </div>
     <h1>Titolo h1</h1>
  
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim magni eveniet, ea soluta ratione nobis dolor commodi
-        amet doloremque vitae maiores ducimus exercitationem ipsum a eaque cumque id ullam nam saepe. Quia aliquam totam
-        ullam voluptatem asperiores alias autem obcaecati dolor fugit vero laboriosam, harum quas numquam labore provident
-        repellat delectus sapiente! Reprehenderit, incidunt dolore. Quis natus sunt tempora incidunt rerum ut labore
-        architecto et a delectus laudantium minus, quam eaque. Nam, odio cum nobis nulla corporis maiores animi voluptas eos
-        laborum error, expedita deserunt et! Aliquid eveniet rerum quaerat nesciunt placeat, magnam odio. Quo qui optio vel
-        odit fuga eligendi recusandae, maiores molestias consequuntur est. Doloremque nihil aperiam laborum consequatur
-        esse, distinctio ratione aliquam quod pariatur odit, perspiciatis consequuntur nemo sit facilis commodi non
-        exercitationem similique! Rem repellat nesciunt aspernatur iste ea inventore nulla dolorem porro accusantium sequi
-        animi adipisci qui pariatur, minus eius dolor dolore deserunt consequuntur provident. In dignissimos corporis ut,
-        eum ipsam dicta hic dolorem necessitatibus. Veritatis eligendi ipsam architecto labore minima! Ab excepturi, ducimus
-        temporibus fugiat molestias dolorem eum laborum dolor numquam eaque, laudantium blanditiis. Vero veniam sapiente sit
-        distinctio, dolor dolore aliquid corporis nihil nisi placeat totam quam quod aspernatur cupiditate asperiores
-        inventore commodi rem quis id natus voluptatum deserunt. Sequi deserunt aliquam, possimus obcaecati similique quam
-        saepe voluptatibus harum, facere quisquam tempora, repudiandae quia ex incidunt. Odio, nesciunt libero earum ut esse
-        atque tempore quae perspiciatis quasi! Nisi eius amet esse neque saepe, laborum modi ad suscipit nesciunt sint
-        tempore doloribus sequi numquam. Reiciendis incidunt animi dignissimos asperiores repudiandae eum impedit tempora
-        illo eos eius ut accusamus repellendus dicta placeat at earum veniam voluptatem provident perferendis hic fugit, rem
-        nam dolore quidem. Quaerat architecto vitae, optio, molestias eos necessitatibus tempore delectus quam dicta, saepe
-        perferendis! Minus beatae libero fugiat, dolorum possimus odit laboriosam ipsam qui cum, laudantium quasi temporibus
-        ipsum a eos dignissimos magni. Inventore tempore quam veritatis fugit harum, alias explicabo? Eaque molestiae
-        perspiciatis aut vero accusantium, sapiente enim quos, unde corrupti repellat deleniti dicta temporibus numquam
-        assumenda maiores repellendus praesentium saepe, modi eligendi cumque. Repellat, rerum quibusdam, saepe optio ipsum
-        voluptatibus dolores nemo doloremque voluptates rem impedit vero dignissimos voluptate sunt, soluta accusantium quod
-        animi omnis dolore libero odio sint iusto reiciendis! Saepe ad ut architecto autem inventore tempore deserunt
-        maiores, quia esse culpa ipsa iure ullam unde odio magni consectetur minus assumenda explicabo placeat quidem est
-        sit voluptatem odit. Aspernatur minima sint esse! Recusandae laborum ut provident? Distinctio quod ipsum dolores,
-        atque dolore, impedit fuga tempore quas natus tempora totam vitae aspernatur adipisci odio soluta error deleniti. Id
-        voluptatibus at vitae maiores enim suscipit libero culpa sit quis dolores velit delectus facilis totam dolore hic,
-        alias tempora. Dolorem obcaecati officia, saepe ratione itaque iure sit delectus laborum veritatis unde natus dolore
-        accusantium minima quibusdam provident quos consequatur eum, atque a nisi ut ab eligendi? Voluptas aperiam deleniti
-        adipisci quaerat reprehenderit doloremque sunt alias quibusdam tempora mollitia. Libero, in pariatur. Repellendus,
-        neque laboriosam eveniet recusandae consequatur consectetur maiores temporibus expedita dolorum!</p>
+<div class="container">
+        <div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat odio cupiditate similique corrupti itaque nesciunt et saepe asperiores ab facere tempore, magni iste hic reiciendis illo unde odit consequatur quasi.</p>
+        </div>
+        <div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum harum eius nam sint cumque culpa iusto maxime deserunt possimus mollitia hic assumenda, quas sunt blanditiis, laudantium ipsum labore praesentium ullam?</p>
+        </div>
+        <div>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor cumque suscipit adipisci quas culpa quia consequuntur numquam deserunt optio ex pariatur saepe labore sit illum, perspiciatis alias, iste dolore praesentium?</p>
+        </div>
+        <div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit adipisci consectetur quidem obcaecati nisi molestias aperiam sunt voluptate ad minus error vero ut expedita, minima deserunt accusamus amet, maxime dolor.</p>
+        </div>
+</div>
 
 
-        <p class="giornata-uggiosa">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis cumque, dignissimos natus ducimus, alias et
-            repellendus provident similique laborum facere, totam necessitatibus! Veniam nesciunt voluptas nam perferendis
-            laudantium neque, cum deserunt assumenda alias saepe, soluta, voluptatem consectetur eos eum rem natus asperiores
-            optio ipsam placeat odio. Veritatis nulla neque ullam ipsa, laboriosam necessitatibus nobis provident quae excepturi
-            quam quos qui illo culpa laborum maiores explicabo est veniam consectetur harum sunt pariatur eveniet. Quo
-            voluptatibus voluptatem, officiis facere ab, voluptas cum rem distinctio explicabo illo quidem. Sint iusto dolor
-            corporis. Tempore quod voluptatem hic ducimus dolor perferendis rem nesciunt. Sequi delectus dolor quaerat nobis
-            vero labore aut error. Deserunt laboriosam nihil explicabo veniam possimus voluptatum cumque, quia quasi alias magni
-            atque obcaecati eveniet quos provident, eaque nulla adipisci labore! Ut accusantium aspernatur illum rem, nihil quia
-            impedit sequi nostrum ipsa non dolorum quidem quam consequatur, modi, veritatis officiis? Fugit incidunt adipisci
-            cumque voluptate veniam alias voluptatibus nesciunt consequuntur perferendis, illum ab, molestias repellat accusamus
-            dolore, earum consectetur quam officia tenetur placeat sequi assumenda voluptas quis officiis? Dicta eius, nobis
-            distinctio vel numquam illum voluptate repellat doloribus, debitis minima accusantium, fuga nostrum quas vero sit
-            mollitia. Labore nobis deserunt similique vel accusantium voluptatum maiores, blanditiis odio omnis, beatae enim
-            alias rem vitae esse. Ad mollitia adipisci aspernatur, non quo accusantium quos ea recusandae quibusdam ratione est
-            aliquid facilis amet iure vitae dolore sit in consectetur. Deleniti nihil incidunt fugiat ab minima rerum delectus
-            asperiores, totam, neque nulla illum corporis excepturi quae enim natus impedit reiciendis. Neque numquam placeat
-            fugiat soluta perspiciatis ut, libero maxime facilis possimus autem, incidunt voluptate architecto rem voluptatem
-            sapiente eveniet ab voluptas nobis. Cupiditate enim vitae deserunt laborum modi nulla porro quis accusantium, non
-            eum? Eos ullam veniam ea perferendis accusamus consectetur eum quas velit magnam dolore, dolorem atque tempore
-            aspernatur commodi molestias? Ad dignissimos fuga eius atque aut mollitia voluptatum ipsum eaque iure. Error quam
-            magni corporis eaque quis, cum delectus ipsa iure doloribus provident saepe, non expedita similique nobis fugiat
-            voluptates? Molestias fugit eaque sed unde eveniet, architecto mollitia nulla vitae enim voluptatibus sapiente quae
-            cum rerum? Tempora, dolores quia nobis veritatis magnam nisi hic eligendi eum animi explicabo perspiciatis ipsam
-            excepturi labore blanditiis veniam aut nesciunt illo exercitationem dignissimos aspernatur tenetur debitis dolore
-            numquam? Dignissimos quia minus corporis necessitatibus! Molestiae distinctio ipsam assumenda quae eveniet? Fuga
-            pariatur quis repellendus delectus sint! Minima ab maiores ut.</p>
+<div class="container2">
+    <div>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore asperiores nisi iste corporis tempora! Natus sunt, dolor molestias possimus eius nulla tempore maxime quisquam quam fugit dolores dolorem mollitia magni.</p>
+    </div>
+    <div>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates aspernatur molestiae eligendi placeat? Eaque dolorum veniam nisi, quisquam dolor repellendus ipsa esse illum tenetur porro autem, impedit sed aut dolore.</p>
+    </div>
+    <div>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio rem numquam cum atque consequuntur, cumque fugit molestiae qui quis incidunt amet sed veritatis libero iure ea aliquam quam dolorem aut.</p>
+    </div>
+    <div>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam, quo. Saepe fugit quia rerum doloribus laboriosam, deserunt dicta, suscipit doloremque nulla accusantium voluptatem eos eaque dolore laborum voluptate aperiam commodi.</p>
+    </div>
+</div>
 
+  
 
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur debitis, asperiores sit tenetur corporis
-                voluptatibus doloribus incidunt consequuntur sed fuga. Sit voluptatem dicta aspernatur dolore. Dignissimos a ipsum vero,
-                quas nemo aut deserunt iure odio eum atque et soluta rerum ab illo molestiae recusandae doloremque numquam qui ad ex?
-                Reiciendis sed beatae laudantium error rem possimus quasi recusandae, sapiente inventore expedita quisquam voluptatem
-                aliquam, corporis ullam dolores aliquid labore accusamus perspiciatis molestias blanditiis maxime suscipit totam
-                voluptate. Officia, autem. Nostrum obcaecati est vitae neque vero consectetur repellat saepe incidunt, fugiat iure nisi
-                aut consequuntur dolorum eius odio laudantium voluptatem suscipit. Consequuntur aut beatae, vel quod amet error libero
-                earum eligendi natus mollitia ab? Id minima ducimus eos similique itaque veniam esse aut error consequatur atque quia
-                eum sit totam, magnam architecto placeat eius earum modi odio officiis? Totam consequatur voluptate fugiat error quia
-                qui officiis quas, esse consequuntur molestiae cum et repellat tempore explicabo sit amet autem! Laboriosam officiis eos
-                qui repudiandae a quos sed ab. Obcaecati vero in magni, ipsam inventore omnis maxime excepturi assumenda sequi? Libero
-                laboriosam dolore ipsam, illo sit, a incidunt nostrum doloribus, ducimus distinctio esse ipsum nihil sequi alias eaque
-                quidem autem magnam minima. Error!
-
-            </p>
-
-            <p class="super-mega-rosso-cool">
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ea, voluptatibus neque vel autem voluptate, earum nobis fuga ipsa perferendis reprehenderit officia laudantium quisquam quaerat perspiciatis quasi accusantium corrupti minus corporis?
-            </p>
 </body>
 
 </html>
